--- a/Frontend/RecipeBuddy/package.json
+++ b/Frontend/RecipeBuddy/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
@@ -19,6 +20,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "bootstrap": "^5.2.3",
+    "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
